fix navbar responsiveness. smaller img size on smaller window size

--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -6,20 +6,26 @@
 
 .navbar {
     background-color: #1D2266;
-    height: 100px;
+    height: 64px;
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-top: 6px;
-    transition: 0.3s all;
     margin-bottom: 2.2%;
+    transition: 0.3s all;
+    -webkit-transition:0.3s all;
+    -moz-transition: 0.3s all;
+    -o-transition: 0.3s all;
 }
 
 .logo {
     height: 100%;
     width: auto;
     transition: 0.3s all;
+    -webkit-transition: 0.3s all;
+    -moz-transition: 0.3s all;
+    -o-transition: 0.3s all;
 }
 
 .navbar a,
@@ -29,22 +35,21 @@
 }
 
 .navbar a:last-child {
-    padding-right: 5.6%;
+    padding-right: 3.6%;
     transition: 0.2s color;
+    -webkit-transition: 0.2s color;
+    -moz-transition: 0.2s color;
+    -o-transition: 0.2s color;
 }
 
 .navbar a:last-child:hover {
     color: rgb(0,252,42);
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 480px) {
     .logo {
-        height: 60px;
-        width: auto;
+        transform: scale(0.8);
     }
-}
-
-@media screen and (max-width: 380px) {
     .navbar {
         height: 60px;
     }
